--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 </head>
 <body>
-    <h1 class="title">Hello World!</h1>
+    <div class="container">
+        <h1 class="title">Hello World!</h1>
+    </div>
 </body>
 </html>
