--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <div class="container">
         <h1 class="title">Hello World!</h1>
     </div>
+    <div class="footer">
+        <p class="copyright">Created by MrZsemle</p>
+    </div>
 </body>
 </html>
