--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Hello World!</h1>
+        <h1 class="title">Hello World! - MrZsemle</h1>
     </div>
     <div class="footer">
         <p class="copyright">Created by MrZsemle</p>
