--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hello World</title>
+    <title>Hello World - MrZsemle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Hello World! - MrZsemle</h1>
+        <h1 class="title">Hello World!</h1>
     </div>
     <div class="footer">
         <p class="copyright">Created by MrZsemle</p>
