--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hello World - MrZsemle</title>
-    <link rel="shortcut icon" type="image/png" href="/ico/projHW.ico" />
+    <link rel="shortcut icon" type="image/png" href="/ico/projHW.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 </head>
