--- a/index.html
+++ b/index.html
@@ -8,14 +8,26 @@
     <link rel="shortcut icon" type="image/png" href="/ico/projHW.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
+    <script src="js/snackbar.js"></script>
 </head>
 
 <body>
+    <div class="earth" >
+        <img onmouseover="snackbar(this)" src="img/earth-globe.svg" class="earthimg"> <!---Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY-->
+    </div>
     <div class="container">
         <h1 class="title">Hello World!</h1>
     </div>
+ 
     <div class="footer">
         <p class="copyright">Created by MrZsemle</p>
+    </div>
+    <div id="snackbar">
+        <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
+                href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0
+                BY</a>
+        </div>
     </div>
 </body>
 
